[gd_scene load_steps=2 format=3 uid="uid://book_select"]

[ext_resource type="Script" path="res://scripts/quest/book_select.gd" id="1_script"]

[node name="BookSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.12, 0.15, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "ブック選択"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 48

[node name="StageInfoLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "ステージ: はじまりの草原"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="DeckLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "使用するブックを選択してください"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="DeckContainer" type="GridContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 4
columns = 3
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30

[node name="Spacer" type="Control" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 40

[node name="BackButton" type="Button" parent="MarginContainer/VBox/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 80)
text = "戻る"
theme_override_font_sizes/font_size = 28

[node name="StartButton" type="Button" parent="MarginContainer/VBox/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 80)
text = "クエスト開始"
theme_override_font_sizes/font_size = 32
